# xdg_activation_test

./: README.md  meson.build  xdgtest.c
